fix imges alignment

--- a/_sass/imports/_content.scss
+++ b/_sass/imports/_content.scss
@@ -40,12 +40,12 @@
 
 .post-thumbnail {
   border: 0;
-  display: block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 2.5rem;
-
+  
   img {
     width: 50%;
-    padding-left: 25%;
   }
 }
 
